--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         <h1>IAN FORSTER MUSIC</h1>
         <p>SLOW EMOTION</p>
         <nav>
-          <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Music</a></li>
-          <li><a href="http://www.google.com" target="_blank" >Booking</a></li>
+          <li><a href="#" >Booking</a></li>
         </nav>
         <div id="nav-icon">
           <div class="bar1"></div>
@@ -25,12 +24,34 @@
 
       <main>
 
+
+        <div class="about">
+          <p class="close">X</p>
+
+          <h2 class="page-heading" >About</h2>
+
+        </div>
+
+        <div class="music" >
+          <p class="close">X</p>
+
+          <h2 class="page-heading" >Music</h2>
+
+        </div>
+
+        <div class="booking" >
+          <p class="close">X</p>
+
+          <h2 class="page-heading" >Booking</h2>
+
+        </div>
+
       </main>
 
       <footer>
         <ul class="social-nav">
-          <li><a class="icon-facebook" href="http://www.facebook.com/petros777" target="_blank"></a></li>
-          <li><a class="icon-instagram" href="http://www.instagram.com/petros777" target="_blank"></a></li>
+          <li><a class="icon-facebook" href="https://www.facebook.com/ian.forster.167" target="_blank"></a></li>
+          <li><a class="icon-instagram" href="http://www.instagram.com/forster.i" target="_blank"></a></li>
         </ul>
       </footer>
 
