--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><a class="icon-facebook" href="https://www.facebook.com/ian.forster.167" target="_blank"></a></li>
           <li><a class="icon-instagram" href="http://www.instagram.com/forster.i" target="_blank"></a></li>
         </ul>
+          <a href="http://petejstone.github.io" target="_blank">&copy;2018 StoneSquare Development<sup>2</sup></a>
       </footer>
 
 
