added music player

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
           <div class="bar3"></div>
         </div>
       </header>
+      
+      <div class="music-player">
+        <iframe src="https://open.spotify.com/embed?uri=spotify:artist:6CG0M3OmltjupMnYEuS2zK"
+        frameborder="0" allowtransparency="true" allow="encrypted-media">
 
+        </iframe>
+      </div>
       <main>
+
 
 
         <div class="about">
