--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100i|Cinzel+Decorative|Julius+Sans+One|Open+Sans:300|Roboto+Condensed:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100i|Cinzel+Decorative|Julius+Sans+One|Open+Sans:300|Roboto+Condensed:700|Raleway" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ian Forster Music</title>
   </head>
   <body>
       <header>
-        <h1>IAN FORSTER MUSIC</h1>
-        <p>SLOW EMOTION</p>
+        <div class="module">
+          <div class="module__contents">
+            <h1>IAN FORSTER</h1>
+          </div>
+          <div class="module__top">
+            <div class="top__content"><p>SLOW EMOTION</p></div>
+          </div>
+        </div>
+        
         <nav>
           <li><a href="#">About</a></li>
           <li><a href="#">Music</a></li>
@@ -21,13 +28,36 @@
           <div class="bar3"></div>
         </div>
       </header>
-      
+
       <div class="music-player">
         <iframe src="https://open.spotify.com/embed?uri=spotify:artist:6CG0M3OmltjupMnYEuS2zK"
         frameborder="0" allowtransparency="true" allow="encrypted-media">
 
         </iframe>
       </div>
+      <div class="home-text">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in
+          neque at mauris ultricies tincidunt a nec purus. Integer a dapibus
+          justo, eu consequat lacus. Morbi aliquet, nulla at eleifend congue,
+          ex augue posuere justo, vel rutrum lorem ligula a orci. Aliquam
+          scelerisque pharetra porttitor. Curabitur quis massa id eros vehicula
+          vehicula. Donec tempus, risus non consectetur mattis, turpis turpis
+          laoreet turpis, quis commodo augue felis nec est. Phasellus turpis leo,
+          rutrum a mauris eu, aliquet dignissim arcu. Sed finibus justo diam,
+          nec pretium mauris viverra ac. Donec fringilla gravida eleifend.</p>
+
+          <p>Ut a tincidunt eros. Maecenas cursus dictum quam, sed congue tortor.
+          Proin orci odio, porttitor sit amet neque a, dapibus fringilla est.
+          Donec at ullamcorper tellus. Proin luctus justo viverra dolor elementum,
+          et commodo tortor sollicitudin. Cras malesuada nibh ac ex scelerisque
+          suscipit vitae quis enim. Etiam sit amet molestie risus. Suspendisse
+          feugiat, dolor in dapibus semper, est dui vehicula ipsum, non posuere
+          odio arcu ut risus. Maecenas ornare risus non scelerisque commodo.
+          Sed nec leo velit. Integer porta malesuada auctor. Nullam id augue ac
+          turpis consectetur sodales vitae sed mauris. Cras ultricies sed nunc
+          non iaculis.</p>
+      </div>
+
       <main>
 
 
@@ -36,13 +66,55 @@
           <p class="close">X</p>
 
           <h2 class="page-heading" >About</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in
+            neque at mauris ultricies tincidunt a nec purus. Integer a dapibus
+            justo, eu consequat lacus. Morbi aliquet, nulla at eleifend congue,
+            ex augue posuere justo, vel rutrum lorem ligula a orci. Aliquam
+            scelerisque pharetra porttitor. Curabitur quis massa id eros vehicula
+            vehicula. Donec tempus, risus non consectetur mattis, turpis turpis
+            laoreet turpis, quis commodo augue felis nec est. Phasellus turpis leo,
+            rutrum a mauris eu, aliquet dignissim arcu. Sed finibus justo diam,
+            nec pretium mauris viverra ac. Donec fringilla gravida eleifend.</p>
 
+            <p>Ut a tincidunt eros. Maecenas cursus dictum quam, sed congue tortor.
+            Proin orci odio, porttitor sit amet neque a, dapibus fringilla est.
+            Donec at ullamcorper tellus. Proin luctus justo viverra dolor elementum,
+            et commodo tortor sollicitudin. Cras malesuada nibh ac ex scelerisque
+            suscipit vitae quis enim. Etiam sit amet molestie risus. Suspendisse
+            feugiat, dolor in dapibus semper, est dui vehicula ipsum, non posuere
+            odio arcu ut risus. Maecenas ornare risus non scelerisque commodo.
+            Sed nec leo velit. Integer porta malesuada auctor. Nullam id augue ac
+            turpis consectetur sodales vitae sed mauris. Cras ultricies sed nunc
+            non iaculis.</p>
+
+            <p>In a rhoncus nunc. Nunc vehicula, erat eget faucibus pulvinar, nulla
+            risus rhoncus ligula, vitae sodales metus tortor a odio. Class aptent
+            taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+            himenaeos. Nunc nec feugiat urna. Praesent egestas arcu eget magna
+            dapibus rutrum. Vestibulum lacus turpis, lacinia ut dapibus sit amet,
+            faucibus nec quam. Ut arcu purus, ullamcorper id scelerisque vel, luctus
+            eget augue. Proin hendrerit eu lacus pretium aliquet. Cras ut dui mattis
+            erat bibendum finibus. Nulla in viverra felis. Cras ornare, massa sit
+            amet dapibus pretium, justo lectus posuere libero, quis auctor ex ex a
+            enim. Vivamus in ligula efficitur libero aliquet elementum. In elit mi,
+            vulputate ac velit at, porttitor fermentum nibh. Suspendisse neque elit,
+            egestas at iaculis id, laoreet quis velit.</p>
         </div>
 
         <div class="music" >
           <p class="close">X</p>
 
           <h2 class="page-heading" >Music</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in
+            neque at mauris ultricies tincidunt a nec purus. Integer a dapibus
+            justo, eu consequat lacus. Morbi aliquet, nulla at eleifend congue,
+            ex augue posuere justo, vel rutrum lorem ligula a orci. Aliquam
+            scelerisque pharetra porttitor. Curabitur quis massa id eros vehicula
+            vehicula. Donec tempus, risus non consectetur mattis, turpis turpis
+            laoreet turpis, quis commodo augue felis nec est. Phasellus turpis leo,
+            rutrum a mauris eu, aliquet dignissim arcu. Sed finibus justo diam,
+            nec pretium mauris viverra ac. Donec fringilla gravida eleifend.</p>
+
 
         </div>
 
@@ -50,6 +122,13 @@
           <p class="close">X</p>
 
           <h2 class="page-heading" >Booking</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in
+            neque at mauris ultricies tincidunt a nec purus. Integer a dapibus
+            justo, eu consequat lacus. Morbi aliquet, nulla at eleifend congue,
+            ex augue posuere justo, vels turpis leo,
+            rutrum a mauris eu, aliquet dignissim arcu. Sed finibus justo diam,
+            nec pretium mauris viverra ac. Donec fringilla gravida eleifend.</p>
+
 
         </div>
 
@@ -60,7 +139,7 @@
           <li><a class="icon-facebook" href="https://www.facebook.com/ian.forster.167" target="_blank"></a></li>
           <li><a class="icon-instagram" href="http://www.instagram.com/forster.i" target="_blank"></a></li>
         </ul>
-          <a href="http://petejstone.github.io" target="_blank">&copy;2018 StoneSquare Development<sup>2</sup></a>
+          <a href="http://petejstone.github.io" target="_blank">&copy;2018 StoneSquare<sup>2</sup> Development</a>
       </footer>
 
 
