fixed layout issue

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header>
         <div class="module">
           <div class="module__contents">
-            <h1>IAN FORSTER</h1>
+            <h1>IAN FORSTER MUSIC</h1>
           </div>
           <div class="module__top">
             <div class="top__content"><p>SLOW EMOTION</p></div>
@@ -78,6 +78,26 @@
             rutrum a mauris eu, aliquet dignissim arcu. Sed finibus justo diam,
             nec pretium mauris viverra ac. Donec fringilla gravida eleifend.</p>
 
+            <p>Ut a tincidunt eros. Maecenas cursus dictum quam, sed congue tortor.
+            Proin orci odio, porttitor sit amet neque a, dapibus fringilla est.
+            Donec at ullamcorper tellus. Proin luctus justo viverra dolor elementum,
+            et commodo tortor sollicitudin. Cras malesuada nibh ac ex scelerisque
+            suscipit vitae quis enim. Etiam sit amet molestie risus. Suspendisse
+            feugiat, dolor in dapibus semper, est dui vehicula ipsum, non posuere
+            odio arcu ut risus. Maecenas ornare risus non scelerisque commodo.
+            Sed nec leo velit. Integer porta malesuada auctor. Nullam id augue ac
+            turpis consectetur sodales vitae sed mauris. Cras ultricies sed nunc
+            non iaculis.</p>
+            <p>Ut a tincidunt eros. Maecenas cursus dictum quam, sed congue tortor.
+            Proin orci odio, porttitor sit amet neque a, dapibus fringilla est.
+            Donec at ullamcorper tellus. Proin luctus justo viverra dolor elementum,
+            et commodo tortor sollicitudin. Cras malesuada nibh ac ex scelerisque
+            suscipit vitae quis enim. Etiam sit amet molestie risus. Suspendisse
+            feugiat, dolor in dapibus semper, est dui vehicula ipsum, non posuere
+            odio arcu ut risus. Maecenas ornare risus non scelerisque commodo.
+            Sed nec leo velit. Integer porta malesuada auctor. Nullam id augue ac
+            turpis consectetur sodales vitae sed mauris. Cras ultricies sed nunc
+            non iaculis.</p>
             <p>Ut a tincidunt eros. Maecenas cursus dictum quam, sed congue tortor.
             Proin orci odio, porttitor sit amet neque a, dapibus fringilla est.
             Donec at ullamcorper tellus. Proin luctus justo viverra dolor elementum,
