added a stop-scrolling effect

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </header>
 
 
-      <div class="home-text">
+      <div class="home-content">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in
           neque at mauris ultricies tincidunt a nec purus. Integer a dapibus
           justo, eu consequat lacus. Morbi aliquet, nulla at eleifend congue,
@@ -51,13 +51,15 @@
           Sed nec leo velit. Integer porta malesuada auctor. Nullam id augue ac
           turpis consectetur sodales vitae sed mauris. Cras ultricies sed nunc
           non iaculis.</p>
-      </div>
 
-      <div class="music-player">
-        <iframe src="https://open.spotify.com/embed?uri=spotify:artist:6CG0M3OmltjupMnYEuS2zK"
-        frameborder="0" allowtransparency="true" allow="encrypted-media">
 
-        </iframe>
+        <div class="music-player">
+          <iframe src="https://open.spotify.com/embed?uri=spotify:artist:6CG0M3OmltjupMnYEuS2zK"
+          frameborder="0" allowtransparency="true" allow="encrypted-media">
+
+          </iframe>
+        </div>
+
       </div>
 
       <main>
