--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         <ul class="social-nav">
           <li><a class="icon-facebook" href="https://www.facebook.com/ian.forster.167" target="_blank"></a></li>
           <li><a class="icon-instagram" href="http://www.instagram.com/forster.i" target="_blank"></a></li>
+          <li><a class="icon-spotify" href="https://open.spotify.com/artist/6CG0M3OmltjupMnYEuS2zK" target="_blank"></a></li>
         </ul>
           <a href="http://petejstone.github.io" target="_blank">&copy;2018 StoneSquare<sup>2</sup> Development</a>
       </footer>
