--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100i|Cinzel+Decorative|Julius+Sans+One|Open+Sans:300|Roboto+Condensed:700|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100i%7CCinzel+Decorative%7CJulius+Sans+One%7COpen+Sans:300%7CRoboto+Condensed:700%7CRaleway" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ian Forster Music</title>
   </head>
@@ -18,9 +18,14 @@
         </div>
 
         <nav>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Music</a></li>
-          <li><a href="#" >Booking</a></li>
+          <ul id="nav">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Music</a></li>
+            <li><a href="#" >Booking</a></li>
+          </ul>
+
+
+
         </nav>
         <div id="nav-icon">
           <div class="bar1"></div>
@@ -31,31 +36,25 @@
 
 
       <div class="home-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in
-          neque at mauris ultricies tincidunt a nec purus. Integer a dapibus
-          justo, eu consequat lacus. Morbi aliquet, nulla at eleifend congue,
-          ex augue posuere justo, vel rutrum lorem ligula a orci. Aliquam
-          scelerisque pharetra porttitor. Curabitur quis massa id eros vehicula
-          vehicula. Donec tempus, risus non consectetur mattis, turpis turpis
-          laoreet turpis, quis commodo augue felis nec est. Phasellus turpis leo,
-          rutrum a mauris eu, aliquet dignissim arcu. Sed finibus justo diam,
-          nec pretium mauris viverra ac. Donec fringilla gravida eleifend.</p>
 
-          <p>Ut a tincidunt eros. Maecenas cursus dictum quam, sed congue tortor.
-          Proin orci odio, porttitor sit amet neque a, dapibus fringilla est.
-          Donec at ullamcorper tellus. Proin luctus justo viverra dolor elementum,
-          et commodo tortor sollicitudin. Cras malesuada nibh ac ex scelerisque
-          suscipit vitae quis enim. Etiam sit amet molestie risus. Suspendisse
-          feugiat, dolor in dapibus semper, est dui vehicula ipsum, non posuere
-          odio arcu ut risus. Maecenas ornare risus non scelerisque commodo.
-          Sed nec leo velit. Integer porta malesuada auctor. Nullam id augue ac
-          turpis consectetur sodales vitae sed mauris. Cras ultricies sed nunc
-          non iaculis.</p>
+        <div class="video-one">
+          <div id="player"></div>
+        </div>
+
+        <div class="home-images">
+          <img src="images/ian_forster-67.jpg" alt="Ian Forster">
+          <img src="images/ian_forster-13.jpg" alt="Ian Forster">
+          <img src="images/ian_forster-50.jpg" alt="Ian Forster">
+        </div>
+
+
+
+
 
 
         <div class="music-player">
           <iframe src="https://open.spotify.com/embed?uri=spotify:artist:6CG0M3OmltjupMnYEuS2zK"
-          frameborder="0" allowtransparency="true" allow="encrypted-media">
+            allow="encrypted-media">
 
           </iframe>
         </div>
@@ -70,74 +69,24 @@
           <p class="close">X</p>
 
           <h2 class="page-heading" >About</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in
-            neque at mauris ultricies tincidunt a nec purus. Integer a dapibus
-            justo, eu consequat lacus. Morbi aliquet, nulla at eleifend congue,
-            ex augue posuere justo, vel rutrum lorem ligula a orci. Aliquam
-            scelerisque pharetra porttitor. Curabitur quis massa id eros vehicula
-            vehicula. Donec tempus, risus non consectetur mattis, turpis turpis
-            laoreet turpis, quis commodo augue felis nec est. Phasellus turpis leo,
-            rutrum a mauris eu, aliquet dignissim arcu. Sed finibus justo diam,
-            nec pretium mauris viverra ac. Donec fringilla gravida eleifend.</p>
-
-            <p>Ut a tincidunt eros. Maecenas cursus dictum quam, sed congue tortor.
-            Proin orci odio, porttitor sit amet neque a, dapibus fringilla est.
-            Donec at ullamcorper tellus. Proin luctus justo viverra dolor elementum,
-            et commodo tortor sollicitudin. Cras malesuada nibh ac ex scelerisque
-            suscipit vitae quis enim. Etiam sit amet molestie risus. Suspendisse
-            feugiat, dolor in dapibus semper, est dui vehicula ipsum, non posuere
-            odio arcu ut risus. Maecenas ornare risus non scelerisque commodo.
-            Sed nec leo velit. Integer porta malesuada auctor. Nullam id augue ac
-            turpis consectetur sodales vitae sed mauris. Cras ultricies sed nunc
-            non iaculis.</p>
-            <p>Ut a tincidunt eros. Maecenas cursus dictum quam, sed congue tortor.
-            Proin orci odio, porttitor sit amet neque a, dapibus fringilla est.
-            Donec at ullamcorper tellus. Proin luctus justo viverra dolor elementum,
-            et commodo tortor sollicitudin. Cras malesuada nibh ac ex scelerisque
-            suscipit vitae quis enim. Etiam sit amet molestie risus. Suspendisse
-            feugiat, dolor in dapibus semper, est dui vehicula ipsum, non posuere
-            odio arcu ut risus. Maecenas ornare risus non scelerisque commodo.
-            Sed nec leo velit. Integer porta malesuada auctor. Nullam id augue ac
-            turpis consectetur sodales vitae sed mauris. Cras ultricies sed nunc
-            non iaculis.</p>
-            <p>Ut a tincidunt eros. Maecenas cursus dictum quam, sed congue tortor.
-            Proin orci odio, porttitor sit amet neque a, dapibus fringilla est.
-            Donec at ullamcorper tellus. Proin luctus justo viverra dolor elementum,
-            et commodo tortor sollicitudin. Cras malesuada nibh ac ex scelerisque
-            suscipit vitae quis enim. Etiam sit amet molestie risus. Suspendisse
-            feugiat, dolor in dapibus semper, est dui vehicula ipsum, non posuere
-            odio arcu ut risus. Maecenas ornare risus non scelerisque commodo.
-            Sed nec leo velit. Integer porta malesuada auctor. Nullam id augue ac
-            turpis consectetur sodales vitae sed mauris. Cras ultricies sed nunc
-            non iaculis.</p>
-
-            <p>In a rhoncus nunc. Nunc vehicula, erat eget faucibus pulvinar, nulla
-            risus rhoncus ligula, vitae sodales metus tortor a odio. Class aptent
-            taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-            himenaeos. Nunc nec feugiat urna. Praesent egestas arcu eget magna
-            dapibus rutrum. Vestibulum lacus turpis, lacinia ut dapibus sit amet,
-            faucibus nec quam. Ut arcu purus, ullamcorper id scelerisque vel, luctus
-            eget augue. Proin hendrerit eu lacus pretium aliquet. Cras ut dui mattis
-            erat bibendum finibus. Nulla in viverra felis. Cras ornare, massa sit
-            amet dapibus pretium, justo lectus posuere libero, quis auctor ex ex a
-            enim. Vivamus in ligula efficitur libero aliquet elementum. In elit mi,
-            vulputate ac velit at, porttitor fermentum nibh. Suspendisse neque elit,
-            egestas at iaculis id, laoreet quis velit.</p>
+          <p >Singer/Songwriter Ian Forster seeks to write soulful, honest music
+            about life and its meaning, love and its journey, and God in His glory.
+            He found his passion for writing music when he was 16 and seeks to glorify
+            Christ throughout the entire process.</p>
+            <img src="images/ian_forster-69.jpg" alt="Ian Forster">
         </div>
 
         <div class="music" >
           <p class="close">X</p>
 
           <h2 class="page-heading" >Music</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in
-            neque at mauris ultricies tincidunt a nec purus. Integer a dapibus
-            justo, eu consequat lacus. Morbi aliquet, nulla at eleifend congue,
-            ex augue posuere justo, vel rutrum lorem ligula a orci. Aliquam
-            scelerisque pharetra porttitor. Curabitur quis massa id eros vehicula
-            vehicula. Donec tempus, risus non consectetur mattis, turpis turpis
-            laoreet turpis, quis commodo augue felis nec est. Phasellus turpis leo,
-            rutrum a mauris eu, aliquet dignissim arcu. Sed finibus justo diam,
-            nec pretium mauris viverra ac. Donec fringilla gravida eleifend.</p>
+          <p>Ian Forster's first studio recorded EP, Slow Emotion,
+          includes five original songs that captivate the sound
+          of heart and emotion.</p>
+
+            <img src="images/album-cover.jpg" alt="album cover">
+
+            
 
 
         </div>
@@ -146,12 +95,13 @@
           <p class="close">X</p>
 
           <h2 class="page-heading" >Booking</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in
-            neque at mauris ultricies tincidunt a nec purus. Integer a dapibus
-            justo, eu consequat lacus. Morbi aliquet, nulla at eleifend congue,
-            ex augue posuere justo, vels turpis leo,
-            rutrum a mauris eu, aliquet dignissim arcu. Sed finibus justo diam,
-            nec pretium mauris viverra ac. Donec fringilla gravida eleifend.</p>
+          <p>Ian Forster provides a welcoming atmosphere of comforting music
+          and worship. If you are interested in booking him for a show, please
+          use the contact link below.</p>
+
+          <a class="contact-info" href="mailto:ianforstermusic@gmail.com?subject=Hey%20There!">Contact/Booking</a>
+
+            <img src="images/ian_forster-11.jpg" alt="Ian Forster">
 
 
         </div>
