--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100i%7CCinzel+Decorative%7CJulius+Sans+One%7COpen+Sans:300%7CRoboto+Condensed:700%7CRaleway" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ian Forster's Music Website">
+    <meta name="google-site-verification" content="DayvggbRQHuPmmXOM3aLtyUdeAVruLJCZWChRiukhGw" />
     <title>Ian Forster Music</title>
   </head>
   <body>
@@ -21,7 +23,7 @@
           <ul id="nav">
             <li><a href="#">About</a></li>
             <li><a href="#">Music</a></li>
-            <li><a href="#" >Booking</a></li>
+            <li><a href="#">Booking</a></li>
           </ul>
 
 
@@ -77,6 +79,9 @@
         </div>
 
         <div class="music" >
+
+
+
           <p class="close">X</p>
 
           <h2 class="page-heading" >Music</h2>
@@ -86,7 +91,7 @@
 
             <img src="images/album-cover.jpg" alt="album cover">
 
-            
+
 
 
         </div>
@@ -94,7 +99,7 @@
         <div class="booking" >
           <p class="close">X</p>
 
-          <h2 class="page-heading" >Booking</h2>
+          <h2 class="page-heading">Booking</h2>
           <p>Ian Forster provides a welcoming atmosphere of comforting music
           and worship. If you are interested in booking him for a show, please
           use the contact link below.</p>
@@ -110,7 +115,7 @@
 
       <footer>
         <ul class="social-nav">
-          <li><a class="icon-facebook" href="https://www.facebook.com/ian.forster.167" target="_blank"></a></li>
+          <li><a class="icon-facebook" href="https://www.facebook.com/ianforstermusic" target="_blank"></a></li>
           <li><a class="icon-instagram" href="http://www.instagram.com/forster.i" target="_blank"></a></li>
           <li><a class="icon-spotify" href="https://open.spotify.com/artist/6CG0M3OmltjupMnYEuS2zK" target="_blank"></a></li>
         </ul>
