--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <li><a class="icon-instagram" href="http://www.instagram.com/forster.i" target="_blank"></a></li>
           <li><a class="icon-spotify" href="https://open.spotify.com/artist/6CG0M3OmltjupMnYEuS2zK" target="_blank"></a></li>
         </ul>
-          <a href="http://petejstone.github.io" target="_blank">&copy;2018 StoneSquare<sup>2</sup> Development</a>
+          <a href="http://petejstone.github.io" target="_blank">&copy;2018 Stonesquared<sup>2</sup> Development</a>
       </footer>
 
 
